testdata/test_failure.txt
1/3 main.test.passing test one...OK
2/3 main.test.passing test two...OK
3/3 main.test.this test will fail...FAIL (TestUnexpectedResult)
error: 'main.test.this test will fail' failed: expected 42, found 4
/home/user/.zvm/0.15.0/lib/std/testing.zig:540:17: 0x1035a90 in expectEqual__struct
    std.testing.expectEqual(expected, actual);
                ^~~~~~~~~~~~
/home/user/project/src/main.zig:26:5: 0x10356a8 in test.this test will fail
    try std.testing.expectEqual(expected, actual);
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+- run test 2/3 passed, 1 failed
Build Summary: 0/1 steps succeeded
└─ run test... FAILED
error: the following build command failed:
zig build test
